@@ -162,7 +162,7 @@ callback (Gsasl * ctx, Gsasl_session * sctx, Gsasl_property prop)
 
   switch (prop)
     {
-    case GSASL_OPENID20_REDIRECT_URL:
+    case GSASL_REDIRECT_URL:
       {
 	line = get_redirect_url (sctx);
 
