@@ -91,11 +91,9 @@ _gsasl_saml20_client_step (Gsasl_session * sctx,
 
     case 1:
       {
-	gsasl_property_set_raw (sctx, GSASL_SAML20_REDIRECT_URL,
-				input, input_len);
+	gsasl_property_set_raw (sctx, GSASL_REDIRECT_URL, input, input_len);
 
-	res = gsasl_callback (NULL, sctx,
-			      GSASL_SAML20_AUTHENTICATE_IN_BROWSER);
+	res = gsasl_callback (NULL, sctx, GSASL_AUTHENTICATE_IN_BROWSER);
 	if (res == GSASL_OK)
 	  {
 	    *output_len = 0;
