@@ -137,9 +137,7 @@ extern "C"
    * @GSASL_NO_HOSTNAME: Could not get required hostname.
    * @GSASL_NO_CB_TLS_UNIQUE: Could not get required tls-unique CB.
    * @GSASL_NO_SAML20_IDP_IDENTIFIER: Could not get required SAML IdP.
-   * @GSASL_NO_SAML20_REDIRECT_URL: Could not get required redirect URL.
-   * @GSASL_NO_OPENID20_REDIRECT_URL: Could not get required OpenID
-   *   redirect URL.
+   * @GSASL_NO_REDIRECT_URL: Could not get required redirect URL.
    * @GSASL_GSSAPI_RELEASE_BUFFER_ERROR: GSS-API library call error.
    * @GSASL_GSSAPI_IMPORT_NAME_ERROR: GSS-API library call error.
    * @GSASL_GSSAPI_INIT_SEC_CONTEXT_ERROR: GSS-API library call error.
@@ -191,8 +189,7 @@ extern "C"
     GSASL_NO_HOSTNAME = 59,
     GSASL_NO_CB_TLS_UNIQUE = 65,
     GSASL_NO_SAML20_IDP_IDENTIFIER = 66,
-    GSASL_NO_SAML20_REDIRECT_URL = 67,
-    GSASL_NO_OPENID20_REDIRECT_URL = 68,
+    GSASL_NO_REDIRECT_URL = 67,
     /* Mechanism specific errors. */
     GSASL_GSSAPI_RELEASE_BUFFER_ERROR = 37,
     GSASL_GSSAPI_IMPORT_NAME_ERROR = 38,
@@ -308,11 +305,9 @@ extern "C"
    *   to avoid re-computation and storing passwords in the clear.
    * @GSASL_CB_TLS_UNIQUE: Base64 encoded tls-unique channel binding.
    * @GSASL_SAML20_IDP_IDENTIFIER: SAML20 user IdP URL.
-   * @GSASL_SAML20_REDIRECT_URL: SAML20 challenge from server to client.
-   * @GSASL_OPENID20_REDIRECT_URL: OpenID 2.0 redirect URL.
+   * @GSASL_REDIRECT_URL: URL to access in GSASL_AUTHENTICATE_IN_BROWSER.
    * @GSASL_OPENID20_OUTCOME_DATA: OpenID 2.0 authentication outcome data.
-   * @GSASL_SAML20_AUTHENTICATE_IN_BROWSER: Request to perform SAML20.
-   * @GSASL_OPENID20_AUTHENTICATE_IN_BROWSER: Request to perform OpenID 2.0.
+   * @GSASL_AUTHENTICATE_IN_BROWSER: Request to authenticate in browser.
    * @GSASL_VALIDATE_SIMPLE: Request for simple validation.
    * @GSASL_VALIDATE_EXTERNAL: Request for validation of EXTERNAL.
    * @GSASL_VALIDATE_ANONYMOUS: Request for validation of ANONYMOUS.
@@ -345,12 +340,10 @@ extern "C"
     GSASL_SCRAM_SALTED_PASSWORD = 17,
     GSASL_CB_TLS_UNIQUE = 18,
     GSASL_SAML20_IDP_IDENTIFIER = 19,
-    GSASL_SAML20_REDIRECT_URL = 20,
-    GSASL_OPENID20_REDIRECT_URL = 21,
+    GSASL_REDIRECT_URL = 20,
     GSASL_OPENID20_OUTCOME_DATA = 22,
     /* Client callbacks. */
-    GSASL_SAML20_AUTHENTICATE_IN_BROWSER = 250,
-    GSASL_OPENID20_AUTHENTICATE_IN_BROWSER = 251,
+    GSASL_AUTHENTICATE_IN_BROWSER = 250,
     /* Server validation callback properties. */
     GSASL_VALIDATE_SIMPLE = 500,
     GSASL_VALIDATE_EXTERNAL = 501,
